tests/build/cases/impl_ui_node/delegate_list_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type.rs:9:32
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | -------------------------------^-------------------------------------------------
  | |                              |
  | |                              the trait `UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNodeList`:
            SortedWidgetVec
            UiNodeList0
            UiNodeList1<W0>
            UiNodeList2<W0, W1>
            UiNodeList3<W0, W1, W2>
            UiNodeList4<W0, W1, W2, W3>
            UiNodeList5<W0, W1, W2, W3, W4>
            UiNodeList6<W0, W1, W2, W3, W4, W5>
          and 16 others

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type.rs:9:65
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | ----------------------------------------------------------------^----------------
  | |                                                               |
  | |                                                               the trait `UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNodeList`:
            SortedWidgetVec
            UiNodeList0
            UiNodeList1<W0>
            UiNodeList2<W0, W1>
            UiNodeList3<W0, W1, W2>
            UiNodeList4<W0, W1, W2, W3>
            UiNodeList5<W0, W1, W2, W3, W4>
            UiNodeList6<W0, W1, W2, W3, W4, W5>
          and 16 others
